log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata: 
  namespace: exercises
  name: hashgenerator-svc
spec:
  type: NodePort
  selector:
    app: hashgenerator
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
